fix auth issues